; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_rc80211_pid_debugfs.c_rate_control_pid_events_poll.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_rc80211_pid_debugfs.c_rate_control_pid_events_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.rc_pid_events_file_info* }
%struct.rc_pid_events_file_info = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@POLLIN = common dso_local global i32 0, align 4
@POLLRDNORM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i32*)* @rate_control_pid_events_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rate_control_pid_events_poll(%struct.file* %0, i32* %1) #0 {
  %3 = alloca %struct.file*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.rc_pid_events_file_info*, align 8
  store %struct.file* %0, %struct.file** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.file*, %struct.file** %3, align 8
  %7 = getelementptr inbounds %struct.file, %struct.file* %6, i32 0, i32 0
  %8 = load %struct.rc_pid_events_file_info*, %struct.rc_pid_events_file_info** %7, align 8
  store %struct.rc_pid_events_file_info* %8, %struct.rc_pid_events_file_info** %5, align 8
  %9 = load %struct.file*, %struct.file** %3, align 8
  %10 = load %struct.rc_pid_events_file_info*, %struct.rc_pid_events_file_info** %5, align 8
  %11 = getelementptr inbounds %struct.rc_pid_events_file_info, %struct.rc_pid_events_file_info* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @poll_wait(%struct.file* %9, i32* %13, i32* %14)
  %16 = load i32, i32* @POLLIN, align 4
  %17 = load i32, i32* @POLLRDNORM, align 4
  %18 = or i32 %16, %17
  ret i32 %18
}

declare dso_local i32 @poll_wait(%struct.file*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
